internal/kube/api.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: spotify
  name: spotify-api-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: spotify
      labels:
        name: spotify-api-pods
    spec:
      containers:
        - image: cescoferraro/spotify:api
          imagePullPolicy: Always
          name: backend
