internal/kube/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: spotify
  name: spotify-frontend-svc
spec:
  selector:
    name: spotify-frontend-pods
  ports:
  - name: web
    port: 3000
    targetPort: 3000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: spotify
  name: spotify-api-svc
spec:
  selector:
    name: spotify-api-pods
  ports:
  - name: web
    port: 8080
    targetPort: 8080
    protocol: TCP
