internal/kube/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: spotify
  name: spotify-ing
spec:
  tls:
  - hosts:
    - spotify.cescoferraro.xyz
    secretName: wildcard-tls
  rules:
  - host: spotify.cescoferraro.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: spotify-frontend-svc
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: spotify
  name: spotify-ing-4
spec:
  tls:
  - hosts:
    - spotifyapi.cescoferraro.xyz
    secretName: wildcard-tls
  rules:
  - host: spotifyapi.cescoferraro.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: spotify-api-svc
          servicePort: 8080
